@startuml youtube_kbd_nav
set namespaceSeparator ::

class "youtube_kbd_nav::src::cycle.dart::Cycle" {
  +int total
  +int max
  +bool isValid
  +int hashCode
  +Cycle +()
  +Cycle -()
  +bool ==()
  +String toString()
}

class "youtube_kbd_nav::src::kbd.dart::Kbd" {
  -String _url
  -Thumbnails _thumbnails
  -VideoButtons _videoButtons
  -KeyboardEvent _keyboardEvent
  -bool _noInputFocus
  -bool _isVideo
  -void _resetStylesAndCyclerAndUrl()
  -void _deactivateFilterButton()
  -Future _keySwitch()
  -void _thumbnailForwards()
  -void _resetThumbnailsWithPreviousCycles()
  -void _thumbnailBackwards()
  -void _navigateHome()
  -void _navigateThumbnailLink()
  -void _navigate()
  -void _navigateHistory()
  -void _subscribe()
  -void _like()
  -void _dislike()
  -void _notificationPopUp()
  -Future _copyVideoUrl()
  -void _commentBoxFocus()
  -void _navigateToChannel()
  -void _navigateToVideoChannel()
}

"youtube_kbd_nav::src::kbd.dart::Kbd" o-- "youtube_kbd_nav::src::thumbnails.dart::Thumbnails"
"youtube_kbd_nav::src::kbd.dart::Kbd" o-- "youtube_kbd_nav::src::video_buttons.dart::VideoButtons"
"youtube_kbd_nav::src::kbd.dart::Kbd" o-- "dart::html::KeyboardEvent"

class "youtube_kbd_nav::src::thumbnails.dart::Thumbnails" {
  -List<Element> _thumbnails
  -Cycle _cycles
  +Cycle cycles
  -Element _currentThumbnail
  +String thumbnailLink
  +String channelLink
  +void +()
  +void -()
  -void _addBorder()
  -void _deleteNeighborsStyles()
  -bool _neighborIndexValidRange()
  -void _changeCurrentThumbnailStyle()
  +void resetCurrentThumbnail()
}

"youtube_kbd_nav::src::thumbnails.dart::Thumbnails" o-- "youtube_kbd_nav::src::cycle.dart::Cycle"
"youtube_kbd_nav::src::thumbnails.dart::Thumbnails" o-- "dart::html::Element"

class "youtube_kbd_nav::src::url_handler.dart::UrlHandler" {
  {static} +String youtubeHome
  {static} +String history
  {static} -String _watchTags
  {static} -String _historyTags
  {static} -String _resultsTags
  {static} -String _homeTags
  {static} -String _channelTags
  {static} +String tags()
  {static} +String prefixedLink()
  {static} +String shortenLink()
}

class "youtube_kbd_nav::src::video_buttons.dart::VideoButtons" {
  -Document _document
  {static} -String _likeDislikeButtonsQuery
  +String channelLink
  +void subscribe()
  +void like()
  +void dislike()
  +void notiticationPopUp()
  +void commentBoxFocus()
}

"youtube_kbd_nav::src::video_buttons.dart::VideoButtons" o-- "dart::html::Document"


@enduml